Updated the build for shoing the path gradually_resolution_as_per_mobile

--- a/demo.html
+++ b/demo.html
@@ -5,8 +5,8 @@
 <h1>The iframe element + CSS</h1>
 
 
-<p>An iframe with a thin black border:</p>
-<iframe src="/index.html" width="80%" height="700px" style="border:1px solid black;">
+<p>Hinduja Hospital Project WebGL build:</p>
+<iframe src="/index.html" width="700px" height="700px" style="border:1px solid black;">
 </iframe>
 
 
